data/documentations/numpy/numpy/typing/tests/data/fail/array_like_pyi.comment
['text':' E: Incompatible types in assignment','line_number':9,'multiline':False]
['text':' E: Incompatible types in assignment','line_number':10,'multiline':False]
['text':' E: Incompatible types in assignment','line_number':11,'multiline':False]
['text':' E: No overload variant','line_number':14,'multiline':False]
['text':' E: No overload variant','line_number':16,'multiline':False]
